# code-review

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  RELEASING.md  dev.Dockerfile  docker-compose.override.yaml  docker-compose.yaml  issues.md  opencode.json  pyproject.toml  skills-lock.json
agent/: Dockerfile  README.md  pyproject.toml
agent/app/: __init__.py  config.py
agent/app/cli/: __init__.py  review.py
agent/app/mcp/: server.py
agent/app/providers/: factory.py  protocols.py
agent/app/repositories/: llm_providers.py  reviews.py
agent/app/schemas/: review_callback.py
agent/app/services/: __init__.py  models.py  opencode_config.py  provider_resolution.py  review_callback.py  review_context.py  review_env.py  review_format.py  review_reporter.py  review_runner.py
agent/app/toolbase/: __init__.py  ci_tools.py  context.py  git_tools.py
agent/docker/: agent-entrypoint.sh  opencode.agent.json
agent/skills/code-review/: SKILL.md
agent/skills/code-reviewer/: SKILL.md
agent/tests/: test_agent_runtime.py  test_mcp_server.py  test_opencode_config.py  test_review.py  test_review_callback.py  test_review_services.py  test_toolbase.py
backend/: README.md  pyproject.toml
backend/app/: config.py  database.py  dependencies.py  exceptions.py  lifespan.py  main.py  paths.py
backend/app/api/: pagination.py  router.py
backend/app/auth/: dependencies.py  oidc.py  saml.py  session.py  state.py
backend/app/cli/: __init__.py  agent.py  backend.py  config_cmd.py  job.py  mcp.py
backend/app/jobs/: celery_app.py  review.py  review_analytics.py  usage_metrics.py
backend/app/observability/: __init__.py  celery_hooks.py  metrics.py  middleware.py  server.py
backend/app/providers/: factory.py  mcp_config.py  opencode_config.py  protocols.py
backend/app/rbac/: __init__.py  catalog.py  checker.py  dependencies.py  effective_permissions.py  models.py  repositories.py
backend/migrations/: 001_init.sql  002_repo_system_prompt.sql  002_reviews.sql  003_integration_settings.sql  003_review_pr_title.sql  004_ado_repo_integration.sql  005_remove_default_llm_model.sql  006_llm_provider_enabled.sql  007_review_pr_metadata.sql  008_teams_projects_auth.sql  009_repo_llm_provider.sql  010_identity_provider.sql  011_local_superuser.sql  012_remove_projects.sql  013_gitlab_repo_integration.sql  014_bitbucket_repo_integration.sql  015_rbac_foundation.sql  016_audit_events.sql  017_review_analytics.sql  018_llm_token_usage.sql  019_usage_rbac.sql
backend/tests/: conftest.py  test_database.py  test_identity_provider_schemas.py  test_install_schemas.py  test_integration_settings.py  test_k8s_runtime_stub.py  test_oidc.py  test_provider_resolution.py  test_providers.py  test_repo_integrations.py  test_review_analytics_events.py  test_review_analytics_metrics.py  test_review_job.py  test_review_job_prepare.py  test_review_spawn.py  test_secrets.py  test_toolbase.py  test_usage_events.py  test_usage_metrics.py
docker/: api-entrypoint.sh  (+1 more)
shared/: README.md  pyproject.toml
shared/coreview_shared/: __init__.py  providers.py  review.py
shared/tests/: test_azure_devops_provider.py  test_bitbucket_cloud_ci_provider.py  test_bitbucket_cloud_provider.py  test_bitbucket_dc_provider.py  test_callback_hmac.py  test_diff_lines.py  test_execution_contracts.py  test_git_worktree.py  test_gitlab_ci_provider.py  test_gitlab_provider.py  test_k8s_execution_backend.py  test_opencode_config.py  test_opencode_usage.py  test_workspace_paths.py
(+405 files in other folders)
