[project]
name = "agent"
version = "0.1.2"
description = "Nexo Co-Review agent — OpenCode runtime and MCP Git/CI tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "coreview-shared",
    "httpx>=0.28.0",
    "mcp>=1.28.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "typer>=0.15.0",
    "uvicorn>=0.49.0",
]

[tool.uv.sources]
coreview-shared = { workspace = true }

[project.scripts]
coreview-agent = "app.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
