[project]
name = "backend"
version = "0.1.0"
description = "Nexo Co-Review API (nexo-coreview)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "celery[redis]>=5.4.0",
    "docker>=7.1.0",
    "fastapi>=0.138.0",
    "httpx>=0.28.0",
    "mcp>=1.28.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "redis>=5.0.0",
    "typer>=0.15.0",
    "uvicorn>=0.49.0",
]

[project.scripts]
code-review = "app.cli:main"

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: requires running Postgres"]
