[project]
name = "coreview-shared"
version = "0.0.1"
description = "Shared protocols, providers, and contracts for Cogito Review"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.13.4",
]

[project.optional-dependencies]
docker = ["docker>=7.1.0"]
k8s = ["kubernetes>=32.0.0"]

[dependency-groups]
dev = [
    "jsonschema>=4.26.0",
    "kubernetes>=32.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["coreview_shared"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
